--- a/index.html
+++ b/index.html
@@ -1,49 +1,85 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Botón de Alarma</title>
-    <style>
-        /* Centrar el botón en la página */
-        body, html {
-            height: 100%;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #f0f0f0;
-        }
-
-        /* Estilo del botón */
-        .alarma-btn {
-            padding: 15px 30px;
-            font-size: 18px;
-            color: white;
-            background-color: #ff4444;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: background-color 0.3s ease;
-        }
-
-        .alarma-btn:hover {
-            background-color: #cc0000;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Conectar a HiveMQ</title>
+  <style>
+    #boton-rojo {
+      width: 100px;
+      height: 100px;
+      background-color: red;
+      border: none;
+      border-radius: 50%;
+      cursor: pointer;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  </style>
 </head>
 <body>
 
-    <!-- Botón de alarma -->
-    <button class="alarma-btn" onclick="activarAlarma()">Activar Alarma</button>
+  <!-- Botón Rojo -->
+  <button id="boton-rojo"></button>
 
-    <script>
-        // Función para mostrar la alerta
-        function activarAlarma() {
-            alert("Alarma activada");
+  <script src="https://unpkg.com/paho-mqtt@1.0.0/mqttws31.js"></script>
+  <script>
+    // Datos de conexión
+    const mqttHost = '7499b707066b4633847ee92fdf3935e6.s1.eu.hivemq.cloud';  // Cambia a tu broker de HiveMQ
+    const mqttPort = 8883;  // Puerto para WebSockets
+    const user = 'hivemq.webclient.1738719443234';  // Tu usuario de HiveMQ
+    const password = '5w#3p8>cHUz7F<loNA$Q';  // Tu contraseña de HiveMQ
+    const topic = 'alarma';  // El tópico al que se enviará el mensaje
+
+    // Crear el cliente MQTT
+    const client = new Paho.MQTT.Client(mqttHost, mqttPort, "cliente-web" + Math.random());
+
+    // Configuración de la conexión
+    client.onConnectionLost = function (responseObject) {
+      if (responseObject.errorCode !== 0) {
+        console.error('Error de conexión: ' + responseObject.errorMessage);
+      }
+    };
+
+    client.onMessageArrived = function (message) {
+      console.log("Mensaje recibido: " + message.payloadString);
+    };
+
+    // Función para conectar a HiveMQ
+    function conectarMQTT() {
+      const options = {
+        userName: user,
+        password: password,
+        onSuccess: function () {
+          console.log('Conectado a HiveMQ!');
+        },
+        onFailure: function (error) {
+          console.error('Error al conectar: ' + error.errorMessage);
         }
-    </script>
+      };
+
+      client.connect(options);
+    }
+
+    // Función para enviar mensaje al tópico
+    function enviarAlarma() {
+      const mensaje = new Paho.MQTT.Message("Alarma activada");
+      mensaje.destinationName = topic;
+      client.send(mensaje);
+      console.log('Mensaje enviado: "Alarma activada"');
+    }
+
+    // Conectar a MQTT
+    conectarMQTT();
+
+    // Evento del botón rojo
+    const botonRojo = document.getElementById('boton-rojo');
+    botonRojo.addEventListener('click', function () {
+      enviarAlarma();
+    });
+  </script>
 
 </body>
 </html>
