--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <script>
     // Datos de conexión
-    const mqttHost = 'wss://7499b707066b4633847ee92fdf3935e6.s1.eu.hivemq.cloud';  // Cambia a tu broker de HiveMQ
+    const mqttHost = '7499b707066b4633847ee92fdf3935e6.s1.eu.hivemq.cloud';  // Cambia a tu broker de HiveMQ
     const mqttPort = 8883;  // Puerto para WebSockets
     const user = 'hivemq.webclient.1738719443234';  // Tu usuario de HiveMQ
     const password = '5w#3p8>cHUz7F<loNA$Q';  // Tu contraseña de HiveMQ
@@ -57,6 +57,7 @@
       const options = {
         userName: user,
         password: password,
+        useSSL   : true,
         onSuccess: function () {
           console.log('Conectado a HiveMQ!');
         },
