--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         .btn-sos {
             padding: 20px 40px;
-            font-size: 24px;
+            font-size: 32px;
             font-weight: bold;
             color: white;
             background-color: red;
@@ -64,7 +64,7 @@
 <body>
 
   <!-- Botón Rojo -->
-  <button id="boton-rojo" class="btn-sos" ></button>
+  <button id="boton-rojo" class="btn-sos" >SOS</button>
 
   <script>
     // Datos de conexión
