--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
             const username = params.get("username");
             const passwd = params.get("passwd");
             const id = params.get("id");
-
+            console.log(username);
+            console.log(passwd);
+            console.log(id);
             return { username, passwd, id};
         }
     
