--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       const username = params.get("username");
       const passwd = params.get("passwd");
 
-      return { username, passwd, id };
+      return { username, passwd };
     }
 
     // Función para enviar mensaje al tópico
